--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,7 @@ services:
     image: redis:7
     ports:
       - "6379:6379"
+    volumes:
+      - ./redis-data:/data
+    command: redis-server --maxmemory 2.5gb --maxmemory-policy allkeys-lru --appendonly yes
+    restart: always
